--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 :root {
   --cart-ele-width:90%;
   --cart-container-width:100%;
-  --prod-img-width:500px
+  --prod-img-width:500px;
+  --slider-width:95vw
 }
 
+button{
+  border:none;
+  outline: none;
+}
 
 .prod-img{
   width: var(--prod-img-width);
@@ -26,6 +31,54 @@
   transform: rotate(90deg);
 }
 
+
+.slider{
+  overflow: hidden;
+  width:var(--slider-width);
+  height: 100%;
+  background-color: rgb(255, 246, 230);
+}
+
+.slider-dots{
+  /* width: 100%; */
+  top:90%;
+  justify-content: space-around;
+  right: 50%;
+  transform: translatex(50%);
+}
+
+.slider-dots button{
+  border: 2px solid black;
+  border-radius: 5px;
+  height: 5px;
+  width: 50px;
+  background-color: rgba(255, 255, 255, 0.555);
+  filter: blur(1px);
+  margin: 0 0.5rem;
+}
+
+.slider-dots button.active{
+  background-color: white;
+  filter: blur(0);
+}
+
+.images-container{
+  width: fit-content;
+  height: 100%;
+  transition: transform 0.5s ease-out;
+}
+
+.slider-img{
+  
+}
+
+.slider img{
+  width: var(--slider-width);
+  height: 100%;
+  object-fit: fill;
+  margin: 0 10px 0 0;
+}
+
 @media (min-width:576px){
   .cart-element {
     --cart-ele-width:clamp(500px,80vw,576px)
@@ -33,4 +86,12 @@
   .cart-container{
     --cart-container-width:clamp(calc(500px + 10%),85vw,calc(576px + 10%))
   }
+  .slider {
+    --slider-width:clamp(200px,50vw,300px)
+  }
+
+  .slider img{
+  /* width: clamp(200px,50vw,300px); */
+  }
+
 }
