--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -9,34 +9,32 @@
 	position: relative;
 }
 
-.layer::before {
-	content: "";
-	position: absolute;
+.image-card{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.image-card a {
 	width: 100%;
 	height: 100%;
-	background-color: black;
-	opacity: 0.2;
-	pointer-events: none;
-	top: 0;
-	left: 0;
-}
-
-.layer:hover::before {
-	opacity: 0.1;
-}
-
-.image-card:hover{
-  background-size: 150%;
-}
-
-.image-card h3 {
+	text-transform: uppercase;
+	font-weight: 700;
+	letter-spacing: clamp(0.5vw,0.2rem,1vw);
+	display:flex;
+	align-items: center;
+	justify-content: center;
+	text-decoration: none;
+	color:white;
 	position: absolute;
+	font-size:clamp(1vw,1.5rem,4vw);
 	margin: 1rem;
 	opacity: 0;
 	transition: opacity 0.2s ease;
 }
 
-.image-card:hover h3 {
+.image-card:hover a {
+	color: white;
 	opacity: 1;
 }
 
