--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,64 @@
 :root {
-  --cart-ele-width:90%;
-  --cart-container-width:100%;
-  --prod-img-width:500px;
-  --slider-width:95vw
+	--cart-ele-width: 90%;
+	--cart-container-width: 100%;
+	--prod-img-width: 500px;
+	--slider-width: 95vw;
 }
 
-
-footer{
-  min-height: 45vh;
+main{
+	min-height: 50vh;
 }
 
+footer {
+	min-height: 45vh;
+	
+}
 
-button{
-  border:none;
-  outline: none;
+button {
+	border: none;
+	outline: none;
 }
 
 /* my utility classes */
-.uppercase{
-  text-transform: uppercase;
+.uppercase {
+	text-transform: uppercase;
 }
 
 .grid {
-  --gap:10px;
-  --column-num:2;
-  --row-height:150px;
+	--gap: 10px;
+	--column-num: 2;
+	--row-height: 150px;
 
-  display: grid;
-  grid-template-columns: repeat(var(--column-num),1fr);
-  grid-auto-rows:var(--row-height) ;
-  gap: var(--gap);
-
+	display: grid;
+	grid-template-columns: repeat(var(--column-num), 1fr);
+	grid-auto-rows: var(--row-height);
+	gap: var(--gap);
 }
 
-.grid>*{
-  height: 100%;
-  width: 100%;
+.grid > * {
+	height: 100%;
+	width: 100%;
 }
 
-.grid-column-2{
-  grid-column: span 2;
+.grid-column-2 {
+	grid-column: span 2;
 }
 
-.grid-row-2{
-  grid-row: span 2;
+.grid-row-2 {
+	grid-row: span 2;
 }
 
-.bc-img{
-  background-position: center;
-  background-repeat: no-repeat;
+.bc-img {
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
-.bc-img-fit{
-  background-size: cover ;
+.bc-img-fit {
+	background-size: cover;
 }
 
-
-.bc-img-contain{
-  background-size: contain ;
+.bc-img-contain {
+	background-size: contain;
 }
 
 .layer::before {
@@ -76,114 +77,105 @@ button{
 	opacity: 0.2;
 }
 
-
-input.num-input{
-  text-align: center;
-  padding: 0;
-  height: 2rem;
-  width: 2rem;
+input.num-input {
+	text-align: center;
+	padding: 0;
+	height: 2rem;
+	width: 2rem;
 }
 
 /* components */
 .small-button {
-  transform: rotate(90deg);
-  width:1.5rem;
-  height: 2rem;
+	transform: rotate(90deg);
+	width: 1.5rem;
+	height: 2rem;
 }
 
-
-.row .small-button{
-  transform: rotate(0deg);
+.row .small-button {
+	transform: rotate(0deg);
 }
 
-.prod-img{
-  width: var(--prod-img-width);
+.prod-img {
+	width: var(--prod-img-width);
 }
 
-.cart-imge{
-  --prod-img-width:clamp(10%,200px,40%)
+.cart-imge {
+	--prod-img-width: clamp(10%, 200px, 40%);
 }
 
-.cart-element{
-  width: var(--cart-ele-width);
+.cart-element {
+	width: var(--cart-ele-width);
 }
 
-.cart-container{
-  width: var(--cart-container-width);
+.cart-container {
+	width: var(--cart-container-width);
 }
 
-.slider{
-  overflow: hidden;
-  width:var(--slider-width);
-  height: 100%;
-  background-color: rgb(255, 246, 230);
-  flex-shrink: 0;
+.slider {
+	overflow: hidden;
+	width: var(--slider-width);
+	height: 100%;
+	background-color: rgb(255, 246, 230);
+	flex-shrink: 0;
 }
 
-.slider-dots{
-  min-width: 100px;
-  width: 100%;
-  top:90%;
-  justify-content: space-around;
-  right: 50%;
-  transform: translatex(50%);
+.slider-dots {
+	min-width: 100px;
+	width: 100%;
+	top: 90%;
+	justify-content: space-around;
+	right: 50%;
+	transform: translatex(50%);
 }
 
-.slider-dots button{
-  border: 2px solid black;
-  border-radius: 5px;
-  height: 5px;
-  width: 50px;
-  background-color: rgba(255, 255, 255, 0.555);
-  filter: blur(1px);
-  margin: 0 0.5rem;
+.slider-dots button {
+	border: 2px solid black;
+	border-radius: 5px;
+	height: 5px;
+	width: 50px;
+	background-color: rgba(255, 255, 255, 0.555);
+	filter: blur(1px);
+	margin: 0 0.5rem;
 }
 
-.slider-dots button.active{
-  background-color: white;
-  filter: blur(0);
+.slider-dots button.active {
+	background-color: white;
+	filter: blur(0);
 }
 
-.images-container{
-  width: fit-content;
-  transition: transform 0.5s ease-out;
+.images-container {
+	width: fit-content;
+	transition: transform 0.5s ease-out;
 }
 
-.slider-img{
-  
+.slider-img {
 }
 
-.slider-img{
-  width: var(--slider-width);
-  /* height: 100%; */
-  object-fit: fill;
-  margin: 0 10px 0 0;
+.slider-img {
+	width: var(--slider-width);
+	/* height: 100%; */
+	object-fit: fill;
+	margin: 0 10px 0 0;
 }
 
+@media (min-width: 768px) {
+	.cart-element {
+		--cart-ele-width: clamp(500px, 80vw, 576px);
+	}
+	.cart-container {
+		--cart-container-width: clamp(calc(500px + 10%), 85vw, calc(576px + 10%));
+	}
+	.slider {
+		--slider-width: max(30vw, 400px);
+		/* flex-shrink: 0; */
+		/* flex-basis: var(--slider-width); */
+	}
+	.slider-img {
+		--slider-width: max(30vw, 400px);
+	}
 
-
-
-
-@media (min-width:768px){
-    .cart-element {
-    --cart-ele-width:clamp(500px,80vw,576px)
-  }
-  .cart-container{
-    --cart-container-width:clamp(calc(500px + 10%),85vw,calc(576px + 10%))
-  }
-  .slider {
-    --slider-width:max(30vw,400px);
-    /* flex-shrink: 0; */
-    /* flex-basis: var(--slider-width); */
-  }
-  .slider-img{
-    --slider-width:max(30vw,400px)
-  }
-
-  .grid{
-  --column-num:4;
-  --row-height:300px;
-   }
+	.grid {
+		--column-num: 4;
+		--row-height: 300px;
+	}
 }
-
-
