--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,12 @@
 	--slider-width: 95vw;
 }
 
-main{
+main {
 	min-height: 50vh;
 }
 
 footer {
 	min-height: 45vh;
-	
 }
 
 button {
@@ -57,6 +56,20 @@ button {
 	background-size: cover;
 }
 
+.pionter {
+	cursor: pointer;
+}
+
+.invalid-input {
+	outline-color: #dc3545 !important;
+	border-color: rgb(220, 53, 69) !important ;
+	box-shadow: none;
+}
+
+.invalid-input:focus {
+	box-shadow: 0 0 0 0.25rem rgb(220 53 69/ 25%) !important;
+}
+
 .bc-img-contain {
 	background-size: contain;
 }
@@ -81,7 +94,7 @@ input.num-input {
 	text-align: center;
 	padding: 0;
 	height: 2rem;
-	width: 2rem;
+	width: 5rem;
 }
 
 /* components */
